[gd_scene load_steps=5 format=2]

[ext_resource path="res://inputmanager.gd" type="Script" id=1]
[ext_resource path="res://AttackLabel.gd" type="Script" id=2]
[ext_resource path="res://arrow.png" type="Texture" id=3]
[ext_resource path="res://Arrows.gd" type="Script" id=4]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="BufferLabel" type="Label" parent="."]
margin_left = 257.498
margin_top = 364.648
margin_right = 857.498
margin_bottom = 441.648
text = "sdfsdfsdfsdfsdf"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackLabel" type="Label" parent="."]
margin_left = 355.3
margin_top = 475.909
margin_right = 760.3
margin_bottom = 508.909
text = "asdaqfrrtfhdtrhder"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectionLabel" type="Label" parent="."]
margin_left = 28.2238
margin_top = 462.129
margin_right = 126.224
margin_bottom = 567.129
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="."]
margin_left = 1.0
margin_top = 2.0
margin_right = 259.0
margin_bottom = 598.0
text = "Up - Space
Down - S
Left - A
Right - D
Attack - U

Supported Commands:
Quarter Circle Back/Forward
DP/Reverse DP
Charge Motions (Back and Down)
Half Circle Back/Forward
Down Down
Dash Forward/Back (Doesn't require attack)

Pad/ stick should work, X(PS)/A(XB) is attack

"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrows" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Up" type="Sprite" parent="Arrows"]
position = Vector2( 560, 50 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="UpRight" type="Sprite" parent="Arrows"]
position = Vector2( 655.159, 95.7539 )
rotation = 0.785398
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Right" type="Sprite" parent="Arrows"]
position = Vector2( 710.595, 188.657 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="DownRight" type="Sprite" parent="Arrows"]
position = Vector2( 663.978, 283.482 )
rotation = 2.35619
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Down" type="Sprite" parent="Arrows"]
position = Vector2( 560, 320 )
rotation = 3.14159
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="DownLeft" type="Sprite" parent="Arrows"]
position = Vector2( 464.911, 274.663 )
rotation = -2.35619
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Left" type="Sprite" parent="Arrows"]
position = Vector2( 417.034, 188.988 )
rotation = -1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="UpLeft" type="Sprite" parent="Arrows"]
position = Vector2( 458.611, 93.2341 )
rotation = -0.785398
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
